--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,9 @@
     "require": {
         "ext-json": "*",
         "php": "^8.1",
-        "monolog/monolog": "^1.23|^2.0|^3.0",
-        "guzzlehttp/guzzle": "^7",
-        "laravel/framework": "^5.6|^6.0|^7.0|^8.0|^9.0|^10.0"
+        "monolog/monolog": "*",
+        "guzzlehttp/guzzle": "*",
+        "laravel/framework": "^5.6|^6.0|^7.0|^8.0|^9.0|^10.0|^11.0"
     },
     "autoload": {
         "psr-4": {
